# xenia-game-manager

./: .gitignore  README.md  config.py  db.py  games.db  import_multidisc.py  main.py  model.py  multidisc.json  pyproject.toml  requirements.txt  setup.py  ui.py  utils.py  xboxtupdater.py  xboxunity_api.py
.github/: FUNDING.yml
.github/workflows/: build.yml  main.yml
.run/: build.run.xml  main.run.xml
Xenia_Game_Manager.egg-info/: PKG-INFO  SOURCES.txt
build_tools/: build.py  package.py  setup.py  version.py  wake.py
build_tools/src/Xenia_Game_Manager.egg-info/: PKG-INFO  SOURCES.txt
db/: games.db
src/: actions.py  archive.py  archive_window.py  config.py  crypto.py  db.py  download.py  edge_import.py  extract.py  main.py  main_updater.py  model.py  netplay.py  profile.py  remove_empty_folders.py  setup.py  ui.py  updater.py  utils.py  xboxunity_api.py  xboxunity_download.py  xminst.py
src/Xenia_Game_Manager.egg-info/: PKG-INFO
src/assets/: archive.txt
src/assets/default/: .x360-game-manager-config.json  game-manager-config.json  xenia-canary.config.toml
src/assets/settings/: 41560845.toml  45410857.toml  454108DF.toml  4541099D.toml  4B4E085C.toml  534307D4.toml  534307EA.toml  534307EC.toml  545407F2.toml  555307F0.toml  5553087E.toml  584108BB.toml  584109BF.toml  58410AC2.toml  58410B90.toml
src/backup/: game-manager-config.json
src/config/: .x360-game-manager-config.json  .x360-game-manager-config.json.previous  compatibility.json  game-manager-config.json  games.json  multidisc.json  netplay.json
src/db/: games.db
src/stfs/: package.py
