[project]
name = "xenia-game-manager"
description = "Xenia Game Manager"
version = "0.7.3"
requires-python = ">=3.10.10"
authors = [
    { name = "Paul Mortlock", email = "you@example.com" }
]
dependencies = [
    "cx-freeze==8.6.4",
    "packaging>=26.2",
    "pyside6>=6.11.1",
    "requests>=2.34.2",
    "pywin32>=311",
    "browser-cookie3>=0.20.1",
]
